Fix tdf#93781 Impress copy wrong style name to clipboard when

style name contains Chinese character.
1. Limit exporting style to paragraph style, since control word
   \sN is for paragraph style.
2. Encode style name in multibyte sring (ex,Chinese) properly with
RTFOutFuncs::Out_String().

Change-Id: Ibdd1010e28c711d7829643b60b32637ebce58bdb